# 3rd-yr-project

./: .gitignore  .gitmodules  3rd-yr-project.sln  CMakeLists.txt  README.md  build_debug_watchdog_analysis.py  imgui.ini
Rewrite/: .gitignore
Rewrite/include/data/: Commands.h  LogMessages.h  SurfaceDef.h  WorldSnapshot.h
Rewrite/include/engines/: HapticEngine.h
Rewrite/include/geometry/: GeometryDatabase.h  GeometryEntry.h  GeometryFactory.h
Rewrite/include/hardware/: DeviceAdapter.h  Packets.h
Rewrite/include/messaging/: Channel.h  ChannelBase.h  MessageBus.h
Rewrite/include/render/: Camera.h  GlSceneRenderer.h  ISceneRenderer.h  (+1 more)
Rewrite/src/: main.cpp  main_serial_tests.cpp
Test Data/: CommAnalysis.m  E1_NoContact_simulation_validation_log.csv  End_to_End.m  End_to_End_nochunk.m  JointTorqueSat.fig  Motors_Contact_Move_device_timing.csv  MultiDepthV2.fig  MultiDepthV2_simulation_validation_log.csv  MultiDepth_device_timing.csv  SimSaturation.fig  SingleDepthHold.fig  SingleDepthHoldV2.fig  SingleDepthHoldV2_simulation_validation_log.csv  constrained_device_state_log.csv  constrained_device_timing.csv  constrained_simulation_validation_log.csv  device_safety_validation_analysis.asv  device_safety_validation_analysis.m  device_state_log.csv  device_state_summary.csv  device_timing.csv  device_timing_summary.csv  lighttouchandhold.csv  plot_constrained.m  rate_1000hz.csv  rate_100hz.csv  rate_1250hz.csv  rate_2000hz.csv  rate_250hz.csv  rate_500hz.csv  rate_summary.csv  results_combined_summary.txt  rtt_10ms.csv  rtt_1ms.csv  rtt_2ms.csv  rtt_summary.csv  simSaturation_device_state_log.csv  simSaturation_device_timing.csv  simSaturation_simulation_validation_log.csv  simulation_validation_analysis.asv  (+6 more)
UI_Tests/: UI_Tests.cpp
app_hello_triangle/: app_hello_triangle.cpp  app_hello_triangle.vcxproj  app_hello_triangle.vcxproj.filters
core_env/: core_env.cpp  core_env.vcxproj  core_env.vcxproj.filters
core_haptics/: core_haptics.cpp  core_haptics.vcxproj  core_haptics.vcxproj.filters
core_meshing/: core_meshing.cpp  core_meshing.vcxproj  core_meshing.vcxproj.filters
core_physics/: core_physics.cpp  core_physics.vcxproj  core_physics.vcxproj.filters
core_scene/: core_scene.cpp  core_scene.vcxproj  core_scene.vcxproj.filters
core_viz/: core_viz.cpp  core_viz.vcxproj  core_viz.vcxproj.filters
core_world/: core_world.cpp  core_world.vcxproj  core_world.vcxproj.filters
docs/: Haptic_Engine.md  Hardware_Interface.md  Implementation_Index.md  Messaging.md  Physics_Engine.md  Rendering_Engine.md  World_System.md  docs.txt  rendering_engine_implementation_note.md
docs/project_notes/: API_REFERENCE.md  ARCHITECTURE.md  Chat gpt responses storage.md  Environment.md  Progress logs.md  Project Architecture Plan.md  budget_proposal.md  project_proposal.md  to_do.md
firmware/: DeviceComms.cpp  DeviceComms.h  Packets.h  README.md  firmware.ino
include/data/: Commands.h  HapticMessages.h  LogMessages.h  PhysicsProps.h  WorldSnapshot.h
include/engines/: HapticEngine.h  PhysicsEnginePhysX.h
include/env/: EnvInterface.h  MarchingCubes.h  MarchingCubesTables.h  Mesher.h  env_interface.h
include/geometry/: GeometryDatabase.h  GeometryEntry.h  GeometryFactory.h
include/haptics/: HapticBuffers.h  HapticEngine.h  ToolState.h
include/hardware/: DeviceAdapter.h  Packets.h  SerialLink.h
include/meshing/: MarchingCubes.h  Mesher.h
include/messaging/: Channel.h  ChannelBase.h  MessageBus.h  SnapshotChannel.h
include/physics/: PhysXEngine.h  PhysicsBuffers.h  PhysicsCommands.h  PhysicsEngine.h  PhysicsProps.h
include/platform/: Window.h
include/render/: GlSceneRenderer.h  ISceneRenderer.h  Renderable.h
include/scene/: Body.h  ISceneRenderer.h  Scene.h
include/util/: CameraUtils.h  RobotUtils.h  robotUtils.h
include/viz/: Camera.h  GlSceneRenderer.h  IRenderer.h  MVPUniforms.h  MeshGPU.h  Renderable.h  RendererGL.h  Shader.h  Transform.h  Window.h  ray.h
include/world/: DoubleBuffer.h  Pose.h  SurfaceDef.h  World.h  WorldDirty.h  WorldManager.h  WorldSnapshot.h  world.h
shaders/: basic.frag  general.frag  general.vert  gridLines.frag  moving.vert  red.frag  sphere.vert
src/: main.cpp
src/Enviroment/: plane_env.h
src/engines/: HapticEngine.cpp  PhysicsEnginePhysX.cpp
src/env/: MarchingCubes.cpp  MarchingCubesTables.cpp  Mesher.cpp  env_interface.h  plane_env.h  source.txt
src/geometry/: GeometryDatabase.cpp  GeometryFactory.cpp
src/haptics/: HapticEngine.cpp  proxy.cpp
src/hardware/: DeviceAdapter.cpp
src/meshing/: MarchingCubes.cpp  MarchingCubesTables.cpp  Mesher.cpp
src/physics/: PhysXEngine.cpp  PhysicsEngine.cpp
src/platform/: Window.cpp
src/render/: GlSceneRenderer.cpp  RenderMeshRegistry.cpp
src/scene/: Body.cpp  Scene.cpp
src/viz/: GlSceneRenderer.cpp  Hello-Triangle.cpp  MeshGPU.cpp  RendererGL.cpp  Shader.cpp  Window.cpp  visulization.cpp
src/world/: World.cpp  world.cpp
tests/Kinematic tests/: Kinematic tests.cpp  Kinematic tests.vcxproj  Kinematic tests.vcxproj.filters
tests/MarchingCubeTest/: MainTests.cpp  MarchingCubeTest.cpp  MarchingCubeTest.vcxproj  MarchingCubeTest.vcxproj.filters
tests/SDF_tests/: SDF_tests.cpp  SDF_tests.vcxproj  SDF_tests.vcxproj.filters
tests/ShaderClassTest/: ShaderClassTest.cpp  ShaderClassTest.vcxproj  ShaderClassTest.vcxproj.filters
tests/UI_Tests/: UI_Tests.cpp  UI_Tests.vcxproj  UI_Tests.vcxproj.filters  imgui.ini
(+144 files in other folders)
